--- a/.github/actions/setup-gradle/action.yml
+++ b/.github/actions/setup-gradle/action.yml
@@ -18,3 +18,6 @@ runs:
           **/.gradle
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/gradle.properties') }}
         restore-keys: ${{ runner.os }}-gradle
+
+    - name: Setup gradlew permissions
+      run: chmod +x ./gradlew
