Made it possible to manually run the workflow for debugging purposes

--- a/.github/workflows/build-1.18.x.yml
+++ b/.github/workflows/build-1.18.x.yml
@@ -5,6 +5,8 @@ on:
       - '1.18.x/*'
   pull_request:
     types: [ opened, synchronize, reopened ]
+  workflow_dispatch:
+
 jobs:
   validate-gradle:
     name: "Validate Gradle wrapper"
