Add shell property cuz I dum

--- a/.github/actions/setup-gradle/action.yml
+++ b/.github/actions/setup-gradle/action.yml
@@ -20,4 +20,5 @@ runs:
         restore-keys: ${{ runner.os }}-gradle
 
     - name: Setup gradlew permissions
+      shell: bash
       run: chmod +x ./gradlew
