--- a/gradle.properties
+++ b/gradle.properties
@@ -33,14 +33,14 @@ forge_version = 40.2.0
 
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version = 0.5.0.i-1002+1.18.2
+create_fabric_version = 0.5.1-b-build.1088
 
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
-create_forge_version = 0.5.0.h-243
+create_forge_version = 0.5.1.c-297
 registrate_forge_version = MC1.18.2-1.1.3
 flywheel_forge_minecraft_version = 1.18.2
-flywheel_forge_version = 0.6.8.a-99
+flywheel_forge_version = 0.6.9-101
 
 # Development QOL
 # Create Fabric supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
