--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ forge_version = 40.2.0
 
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version = 0.5.1-b-build.1088
+create_fabric_version = 0.5.0.i-1002+1.18.2
 
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
