working fish + cc integration

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     runtimeOnly("mezz.jei:jei-${minecraft_version}:${jei_forge_version}")
 
     // CC Tweaked
-    modCompileOnly("curse.maven:cctweaked-282001:4061947")
+    modImplementation("curse.maven:cctweaked-282001:4061947")
 }
 
 processResources {
