so much stuff i dont want to split it up into multiple commits, also its bugged af

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 modId = "vsrnd"
 version = "${version}"
 displayName = "Create x Valkyrien Skies Template"
-authors = ["fluffy", "potato", "ewoudje"]
+authors = ["potato", "fern", "dacodia", "toni"]
 description = '''
 A template mod for Create x Valkyrien Skies mods.
 '''
