--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 
     modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
 
-    modImplementation("net.minecraftforge:forgeconfigapiport-fabric:3.2.4") // TODO do we still need this?
+    modImplementation("net.minecraftforge:forgeconfigapiport-fabric:3.2.4")
 
     // Development QOL
     modLocalRuntime("maven.modrinth:lazydfu:${lazydfu_version}")
