Renamed everything from vscreate to vsrnd

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,7 +3,7 @@ architectury {
 }
 
 loom {
-    accessWidenerPath = file("src/main/resources/vscreate.accesswidener")
+    accessWidenerPath = file("src/main/resources/vsrnd.accesswidener")
 }
 
 test {
@@ -59,7 +59,7 @@ dependencies {
 publishing {
     publications {
         mavenCommon(MavenPublication) {
-            groupId = "org.valkyrienskies.vscreate"
+            groupId = "org.valkyrienskies.vsrnd"
             version = project.version
             artifactId = rootProject.archives_base_name + "-" + project.name
             from components.java
