--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -37,6 +37,6 @@ side = "BOTH"
 [[dependencies.vsrnd]]
 modId = "create"
 mandatory = true
-versionRange = "${create_version}"
+versionRange = "${create_forge_version}"
 ordering = "NONE"
 side = "BOTH"
