--- a/.github/actions/setup-gradle/action.yml
+++ b/.github/actions/setup-gradle/action.yml
@@ -22,3 +22,7 @@ runs:
     - name: Setup gradlew permissions
       shell: bash
       run: chmod +x ./gradlew
+
+    - name: Clean gradle
+      shell: bash
+      run: ./gradlew clean
