Set Create Big Cannons Version to Ensure Consistency

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ archives_base_name=vsrnd
 maven_group=org.valkyrienskies
 minecraft_version=1.18.2
 enabled_platforms=fabric,forge
-createbigcannons_version=+
+createbigcannons_version=0.5.2+
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
 qm_version=26
