--- a/gradle.properties
+++ b/gradle.properties
@@ -19,11 +19,11 @@ parchment_version=2022.11.06
 vs2_version=2.1.0-beta.12+5a40781d5d
 # Fabric
 # https://fabricmc.net/develop/
-fabric_loader_version=0.14.11
-fabric_api_version=0.67.0+1.18.2
+fabric_loader_version=0.14.23
+fabric_api_version=0.76.0
 # Forge
 # https://files.minecraftforge.net/net/minecraftforge/forge/
-forge_version=40.2.4
+forge_version=40.2.10
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
 create_fabric_version=0.5.1-b-build.1088+mc1.18.2
