--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,10 @@ allprojects {
     apply plugin: "architectury-plugin"
     apply plugin: "maven-publish"
 
-    archivesBaseName = rootProject.archives_base_name
+    base {
+        archivesBaseName = rootProject.archives_base_name
+    }
+
     group = rootProject.maven_group
 
     // Formats the mod version to include the loader, Minecraft version, and build number (if present)
