--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     implementation(forgeRuntimeLibrary('curse.maven:kotlinforforge-351264:3925887'))
 
     // JEI
-    modCompileOnly("mezz.jei:jei-${minecraft_version}:${jei_forge_version}:api")
-    runtimeOnly("mezz.jei:jei-${minecraft_version}:${jei_forge_version}")
+    compileOnly("mezz.jei:jei-${minecraft_version}:${jei_forge_version}:api")
+    modLocalRuntime("mezz.jei:jei-${minecraft_version}:${jei_forge_version}")
 
     // CC Tweaked
     modCompileOnly("curse.maven:cctweaked-282001:4061947")
