Added CC: Tweaked to the local runtime for testing

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 
     // CC Tweaked
     modCompileOnly("curse.maven:cctweaked-282001:4061947")
+    modLocalRuntime("curse.maven:cctweaked-282001:4061947")
 }
 
 processResources {
