Added CC: Restitched to the local runtime for testing

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -87,6 +87,7 @@ dependencies {
 
     // CC Restitched
     modCompileOnly("curse.maven:cc-restitched-462672:3622561")
+    modLocalRuntime("curse.maven:cc-restitched-462672:3622561")
 }
 
 processResources {
