--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     modLocalRuntime("mezz.jei:jei-${minecraft_version}:${jei_forge_version}")
 
     //Create big cannons
-    modApi("com.rbasamoyai:createbigcannons-forge-${minecraft_version}:${createbigcannons_version}")
+    modApi("com.rbasamoyai:createbigcannons-forge-${minecraft_version}:${createbigcannons_version}") { transitive = false }
 
     // Add Kotlin for Forge.
     implementation(forgeRuntimeLibrary('curse.maven:kotlinforforge-351264:3925887'))
@@ -95,17 +95,17 @@ shadowJar {
     exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+    archiveClassifier = "dev-shadow"
 }
 
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier null
+    archiveClassifier = null
 }
 
 jar {
-    classifier "dev"
+    archiveClassifier = "dev"
 }
 
 sourcesJar {
