--- a/gradle.properties
+++ b/gradle.properties
@@ -19,20 +19,20 @@ parchment_version=2022.11.06
 vs2_version=2.1.0-beta.12+5a40781d5d
 # Fabric
 # https://fabricmc.net/develop/
-fabric_loader_version=0.14.23
-fabric_api_version=0.76.0
+fabric_loader_version=0.14.11
+fabric_api_version=0.67.0
 # Forge
 # https://files.minecraftforge.net/net/minecraftforge/forge/
-forge_version=40.2.10
+forge_version=40.2.0
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version=0.5.1-b-build.1088+mc1.18.2
+create_fabric_version=0.5.0.i-944+1.18.2
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
-create_forge_version=0.5.1.c-297
+create_forge_version=0.5.0.i-249
 registrate_forge_version=MC1.18.2-1.1.3
 flywheel_forge_minecraft_version=1.18.2
-flywheel_forge_version=0.6.9-101
+flywheel_forge_version=0.6.8.a-99
 # Development QOL
 # Create Fabric supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
